--- a/taotao-portal/src/main/resources/resource/resources.properties
+++ b/taotao-portal/src/main/resources/resource/resources.properties
@@ -4,3 +4,6 @@ REST_BASE_URL = http://localhost:8081/rest
 
 #首页大广告位
 REST_INDEX_AD_URL = /content/list/89
+
+#search服务地址
+SEARCH_BASE_URL=http://localhost:8083/search/query
