--- a/taotao-rest/pom.xml
+++ b/taotao-rest/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
