--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -13,6 +13,7 @@
         <module>../taotao-rest</module>
         <module>../taotao-portal</module>
         <module>../taotao-search</module>
+        <module>../taotao-sso</module>
     </modules>
 
     <packaging>pom</packaging>
