--- a/taotao-portal/src/main/resources/resource/resources.properties
+++ b/taotao-portal/src/main/resources/resource/resources.properties
@@ -7,3 +7,8 @@ REST_INDEX_AD_URL = /content/list/89
 
 #search服务地址
 SEARCH_BASE_URL=http://localhost:8083/search/query
+
+#商品基本信息URL
+ITEM_INFO_URL=/item/info/
+ITEM_DESC_URL=/item/desc/
+ITEM_PARAM_URL=/item/param/
