--- a/taotao-portal/src/main/resources/resource/resources.properties
+++ b/taotao-portal/src/main/resources/resource/resources.properties
@@ -1,14 +1,16 @@
 #服务层基础配置文件
-
-REST_BASE_URL = http://localhost:8081/rest
-
+REST_BASE_URL=http://localhost:8081/rest
 #首页大广告位
-REST_INDEX_AD_URL = /content/list/89
-
+REST_INDEX_AD_URL=/content/list/89
 #search服务地址
 SEARCH_BASE_URL=http://localhost:8083/search/query
-
 #商品基本信息URL
 ITEM_INFO_URL=/item/info/
 ITEM_DESC_URL=/item/desc/
 ITEM_PARAM_URL=/item/param/
+#单点登录系统的URL
+SSO_BASE_URL=http://localhost:8084
+#根据token去用户信息
+SSO_USER_TOKEN=/user/token/
+#单点登录的系统的登录URL
+SSO_PAGE_LOGIN=/page/login
